--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section id="hero">
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt=""></a>
-      <h1 data-aos="zoom-in">Welcome To Ironeset</h1>
+      <h1 data-aos="zoom-in">Welcome To IroneSet</h1>
       <h2 data-aos="fade-up">WE PROVIDE A SECURITY SOLUTION TO PROTECT YOUR ORGNAIZATION ASSETS</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
