--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="icon-box mt-5 mt-lg-0" data-aos="fade-up">
               <i class="bx bx-receipt"></i>
-              <h4>Intiligent threat reporting</h4>
+              <h4>Intelligent threat reporting</h4>
               <p>Detailed network traffic reports highlighting threat level of each traffic are generated to NIDS users</p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="100">
