--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt=""></a>
       <!--<h1 data-aos="zoom-in">Welcome To IroneSet</h1> -->
-      <h2 data-aos="fade-up">WE PROVIDE A SECURITY SOLUTION TO PROTECT YOUR ORGNAIZATION ASSETS</h2>
+       <!--<h2 data-aos="fade-up">WE PROVIDE A SECURITY SOLUTION TO PROTECT YOUR ORGNAIZATION ASSETS</h2> -->
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/analytics.jpg" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -450,7 +450,7 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
+<!--             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   Irnoset team has a unique mixture of expertise and skills to provide an excellent secuirty solution. NIDS product leverages state-of-the-art machine learning techniques to ensure solid security and continious improvment.
@@ -459,7 +459,7 @@
                 <h3>Adam Smith</h3>
                 <h4>Security Advisor</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item --> -->
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item">
@@ -485,7 +485,7 @@
             </div> -->
             <!-- End testimonial item -->
 
-            <div class="swiper-slide">
+<!--             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
                   The advance technology used in Ironeset NIDS makes it unique in the security market. There is a need for AI-powered itrusion detection system in the market, and Ironset NIDS satisfies that need.
@@ -494,7 +494,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Security Engineer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End testimonial item --> -->
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item">
@@ -551,7 +551,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -621,7 +621,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> --> <!-- End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing section-bg">
@@ -636,7 +636,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Free Trail for 2 months</h3>
+              <h3>Free Trail for 2 months - Individuals</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
               <ul>
                 <li>NIDS</li>
@@ -653,8 +653,8 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in">
-              <span class="recommended-badge">Recommended</span>
-              <h3>Silver</h3>
+              <!-- <span class="recommended-badge">Recommended</span> -->
+              <h3>Small/Medium Companies</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
               <ul>
                 <li>NIDS</li>
@@ -671,7 +671,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Gold</h3>
+              <h3>Large Companies</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
               <ul>
                 <li>NIDS</li>
@@ -782,7 +782,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Ironset.HD@gmail.com</p>
+                <p>admin@theironset.com</p>
               </div>
 
               <div class="phone">
