--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
             <div class="image">
-              <img src="assets/img/analytics.jpg" class="img-fluid" alt="">
+              <img src="assets/img/analytics.png" class="img-fluid" alt="">
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
