--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
           <i class="bx bxs-quote-right"></i>
         </div>
 
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+<!--         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
 <!--             <div class="swiper-slide">
@@ -510,7 +510,7 @@
 
           </div>
           <div class="swiper-pagination"></div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Testimonials Section -->
