--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 <h3>Adam Smith</h3>
                 <h4>Security Advisor</h4>
               </div>
-            </div><!-- End testimonial item --> -->
+            </div><!-- End testimonial item -->
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item">
@@ -494,7 +494,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Security Engineer</h4>
               </div>
-            </div><!-- End testimonial item --> -->
+            </div><!-- End testimonial item --> 
 
             <!-- <div class="swiper-slide">
               <div class="testimonial-item">
@@ -508,9 +508,9 @@
             </div> -->
             <!-- End testimonial item -->
 
-          </div>
+<!--           </div>
           <div class="swiper-pagination"></div>
-        </div> -->
+        </div>  -->
 
       </div>
     </section><!-- End Testimonials Section -->
