--- a/index.html
+++ b/index.html
@@ -522,28 +522,28 @@
         <div class="row">
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Picture1.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="100">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Picture2.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="200">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Picture3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="300">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Picture4.png" class="img-fluid" alt="">
           </div>
 
-          <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="400">
+<!--           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="400">
             <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in" data-aos-delay="500">
             <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div>
+          </div> -->
 
         </div>
 
@@ -646,7 +646,7 @@
                 <li class="na">Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
@@ -654,8 +654,8 @@
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in">
               <!-- <span class="recommended-badge">Recommended</span> -->
-              <h3>Small/Medium Companies</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>Free Trail for 2 months - Small/Medium Companies</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
               <ul>
                 <li>NIDS</li>
                 <li>Installation</li>
@@ -664,15 +664,15 @@
                 <li class="na">Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Large Companies</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Free Trail for 2 months - Large Companies</h3>
+              <h4><sup>$</sup>0<span> / month</span></h4>
               <ul>
                 <li>NIDS</li>
                 <li>Installation</li>
@@ -681,7 +681,7 @@
                 <li>Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
