--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                 <li class="na">Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download Now</a>
+                <a href="https://drive.google.com/uc?export=download&id=17FvctG6bo8STH2zqg7-0NFZyVnY8HEkc" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
@@ -664,7 +664,7 @@
                 <li class="na">Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download Now</a>
+                <a href="https://drive.google.com/uc?export=download&id=17FvctG6bo8STH2zqg7-0NFZyVnY8HEkc" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
@@ -681,7 +681,7 @@
                 <li>Training On-Demand</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Download Now</a>
+                <a href="https://drive.google.com/uc?export=download&id=17FvctG6bo8STH2zqg7-0NFZyVnY8HEkc" class="btn-buy">Download Now</a>
               </div>
             </div>
           </div>
