--- a/index.html
+++ b/index.html
@@ -520,6 +520,10 @@
       <div class="container">
 
         <div class="row">
+          <div>
+          </div>
+          <div>
+          </div>
 
           <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in">
             <img src="assets/img/clients/Picture1.png" class="img-fluid" alt="">
